--- a/.github/workflows/publishtofirebase.yml
+++ b/.github/workflows/publishtofirebase.yml
@@ -13,5 +13,6 @@ jobs:
       run: echo Hello, world!
     - uses: actions/setup-node@v1
     - name: Build dist
-    - run: npm install
-    - run: npm run build --if-present
+      run: |
+        npm install,
+        npm run build --if-present
