--- a/.github/workflows/publishtofirebase.yml
+++ b/.github/workflows/publishtofirebase.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Build dist
       run: |
         npm install
-        npm run build:prod
+        npm run build
     - uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting
