--- a/.github/workflows/publishtofirebase.yml
+++ b/.github/workflows/publishtofirebase.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+      - name: Use Node.js 10.x
+        uses: actions/setup-node@master
+        with:
+          version: 10.x
       - name: Install Dependencies
         run: npm install
       - name: Build
