--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,10 @@ jobs:
         uses: actions/checkout@master
       - name: Use Node.js 10.x
         uses: actions/setup-node@master
-        with:
-          version: 10.x
       - name: Install Dependencies
         run: npm install -g
       - name: Build
-        run: npm run build
+        run: npm ci, npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
