--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.15.3",
     "vuetify": "^2.2.12",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
+    "@vue/cli-plugin-pwa": "^4.2.2",
     "@vue/cli-plugin-vuex": "^4.2.2",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
