--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.3",
+    "vue-progressbar": "^0.7.5",
+    "vue-router": "^3.1.5",
     "vuetify": "^2.2.12",
     "vuex": "^3.1.2"
   },
