--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-i18n": "^8.15.3",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.5",
+    "vue-uuid": "^1.1.1",
     "vuetify": "^2.2.12",
     "vuex": "^3.1.2"
   },
