--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
+    "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
