--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.5",
     "vue-uuid": "^1.1.1",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.14",
     "vuex": "^3.1.2"
   },
