--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.6.2",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.3",
     "vue-progressbar": "^0.7.5",
