--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g @vue/cli@latest
-    - working-directory: "./Aiki-HelpDesk"
     - name: Build App
       working-directory: ./Aiki-HelpDesk
       run: |
+        npm install -g @vue/cli@latest
         npm install
         npm run build
