--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g @vue/cli@latest
     - name: Build App
-      working-directory: ./Aiki-HelpDesk
+      working-directory: Aiki-HelpDesk
       run: |
         npm install
         npm run build
