--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,19 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: Download Artifact
+      uses: actions/download-artifact@master
+      with:
+          name: dist
+    - name: Deploy On Firebase
+      uses: w9jds/firebase-action@master
+      with:
+          args: deploy --only hosting
+      env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}  
+    - name: Send Notification To Slack
+      uses: rtCamp/action-slack-notify@v2.0.0
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_CHANNEL: "#general" 
+        SLACK_TITLE: "Ticket Web Site Published On Firebase"      
