--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@latelier/vue-signalr": "^1.1.9",
+    "@vuex-orm/core": "^0.35.2",
+    "@vuex-orm/plugin-axios": "^0.9.2",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
