--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
+    "firebase": "^7.9.1",
     "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.6.2",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.3",
+    "vue-meta": "^2.3.2",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.5",
     "vue-uuid": "^1.1.1",
