--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
-    "firebase": "^7.9.1",
+    "firebase": "^7.9.3",
     "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.6.2",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.15.3",
-    "vue-meta": "^2.3.2",
+    "vue-i18n": "^8.15.4",
+    "vue-meta": "^2.3.3",
     "vue-progressbar": "^0.7.5",
-    "vue-router": "^3.1.5",
+    "vue-router": "^3.1.6",
     "vue-uuid": "^1.1.1",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.2.14",
+    "vuetify": "^2.2.15",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-plugin-pwa": "^4.2.2",
-    "@vue/cli-plugin-vuex": "^4.2.2",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "^4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-pwa": "^4.2.3",
+    "@vue/cli-plugin-vuex": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.1",
     "persian-date": "^1.1.0",
-    "sass": "^1.19.0",
+    "sass": "^1.26.2",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
