--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
     "vue-uuid": "^1.1.1",
+    "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.2.15",
     "vuex": "^3.1.2"
