--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
-    "firebase": "^7.9.3",
+    "filepond": "^4.12.0",
+    "firebase": "^7.10.0",
     "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.6.2",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
+    "vue-filepond": "^6.0.2",
     "vue-i18n": "^8.15.4",
     "vue-meta": "^2.3.3",
     "vue-progressbar": "^0.7.5",
@@ -38,7 +40,7 @@
     "@vue/cli-service": "^4.2.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.1",
+    "eslint-plugin-vue": "^6.2.2",
     "persian-date": "^1.1.0",
     "sass": "^1.26.2",
     "sass-loader": "^8.0.0",
