--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "vue-filepond": "^6.0.2",
     "vue-i18n": "^8.15.7",
     "vue-meta": "^2.3.3",
+    "vue-persian-datetime-picker": "^2.1.4",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
     "vue-uuid": "^1.1.1",
+    "vue2-persian-datepicker": "^2.1.1",
     "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.2.19",
