--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^7.12.0",
     "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
+    "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
     "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
