--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,10 @@ jobs:
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_CHANNEL: "#general" 
-        SLACK_TITLE: "Ticket Web Site Published On Firebase"      
+        SLACK_TITLE: "Ticket Web Site Published On Firebase"
+    
+    - name: Send Notification To Microsoft Teams
+      uses: dhollerbach/github-action-send-message-to-ms-teams@1.0.10
+      with:
+        webhook: ${{ secrets.TEAMS_WEBHOOK }}
+        message: 'Help Desk App Published On Heroku'    
