--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@latelier/vue-signalr": "^1.1.9",
     "@vuex-orm/core": "^0.35.2",
     "@vuex-orm/plugin-axios": "^0.9.2",
+    "@vuex-orm/plugin-search": "^0.24.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "es6-promise": "^4.2.8",
     "filepond": "^4.13.0",
-    "firebase": "^7.13.1",
+    "firebase": "^7.14.0",
     "highcharts-vue": "^1.3.5",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
