--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "filepond": "^4.16.0",
     "firebase": "^7.15.0",
     "highcharts-vue": "^1.3.5",
+    "lodash": "^4.17.15",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
@@ -25,6 +26,7 @@
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
     "vue-i18n": "^8.18.2",
+    "vue-lodash": "^2.1.2",
     "vue-meta": "^2.4.0",
     "vue-persian-datetime-picker": "^2.1.5",
     "vue-progressbar": "^0.7.5",
