--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "es6-promise": "^4.2.8",
     "filepond": "^4.16.0",
     "firebase": "^7.15.0",
-    "highcharts-vue": "^1.3.5",
     "lodash": "^4.17.15",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
@@ -49,6 +48,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jscharting-vue": "^1.1.0",
     "material-design-icons-iconfont": "^5.0.1",
     "persian-date": "^1.1.0",
     "sass": "^1.26.8",
