--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.27",
     "@latelier/vue-signalr": "^1.1.9",
     "@vuex-orm/core": "^0.35.2",
     "@vuex-orm/plugin-axios": "^0.9.3",
@@ -15,13 +16,13 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
-    "filepond": "^4.16.0",
-    "firebase": "^7.15.0",
+    "filepond": "^4.17.1",
+    "firebase": "^7.15.3",
     "lodash": "^4.17.15",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
-    "vee-validate": "^3.3.3",
+    "vee-validate": "^3.3.5",
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
     "vue-i18n": "^8.18.2",
@@ -30,32 +31,30 @@
     "vue-meta": "^2.4.0",
     "vue-persian-datetime-picker": "^2.1.5",
     "vue-progressbar": "^0.7.5",
-    "vue-router": "^3.3.2",
+    "vue-router": "^3.3.4",
     "vue-uuid": "^1.1.1",
     "vue2-persian-datepicker": "^2.1.1",
     "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.2.34",
+    "vuetify": "^2.3.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.3.45",
-    "@vue/cli-plugin-babel": "^4.4.1",
-    "@vue/cli-plugin-eslint": "^4.4.1",
-    "@vue/cli-plugin-pwa": "^4.4.1",
-    "@vue/cli-plugin-vuex": "^4.4.1",
-    "@vue/cli-service": "^4.4.1",
+    "@vue/cli-plugin-babel": "^4.4.4",
+    "@vue/cli-plugin-eslint": "^4.4.4",
+    "@vue/cli-plugin-pwa": "^4.4.4",
+    "@vue/cli-plugin-vuex": "^4.4.4",
+    "@vue/cli-service": "^4.4.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "jscharting-vue": "^1.1.0",
     "material-design-icons-iconfont": "^5.0.1",
-    "persian-date": "^1.1.0",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.4"
+    "vuetify-loader": "^1.5.0"
   },
   "eslintConfig": {
     "root": true,
