--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
-    "filepond": "^4.17.1",
-    "firebase": "^7.15.3",
+    "filepond": "^4.18.0",
+    "firebase": "^7.15.5",
     "lodash": "^4.17.15",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
-    "vee-validate": "^3.3.5",
+    "vee-validate": "^3.3.6",
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
     "vue-i18n": "^8.18.2",
@@ -36,23 +36,23 @@
     "vue2-persian-datepicker": "^2.1.1",
     "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.3.1",
+    "vuetify": "^2.3.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.3.45",
-    "@vue/cli-plugin-babel": "^4.4.4",
-    "@vue/cli-plugin-eslint": "^4.4.4",
-    "@vue/cli-plugin-pwa": "^4.4.4",
-    "@vue/cli-plugin-vuex": "^4.4.4",
-    "@vue/cli-service": "^4.4.4",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.26.8",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.5.0"
   },
