--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "vue-lodash": "^2.1.2",
     "vue-material-design-icons": "^4.7.1",
     "vue-meta": "^2.4.0",
+    "vue-notification": "^1.3.20",
     "vue-persian-datetime-picker": "^2.1.5",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.3.4",
+    "vue-toastification": "^1.7.6",
     "vue-uuid": "^1.1.1",
     "vue2-persian-datepicker": "^2.1.1",
     "vue2-touch-events": "^2.2.1",
