--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.27",
+    "@amcharts/amcharts4": "^4.9.30",
+    "@hcaptcha/vue-hcaptcha": "^0.2.2",
     "@latelier/vue-signalr": "^1.1.9",
     "@microsoft/signalr": "^3.1.5",
     "@vuex-orm/core": "^0.35.2",
@@ -18,12 +19,12 @@
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "filepond": "^4.18.0",
-    "firebase": "^7.15.5",
-    "lodash": "^4.17.15",
+    "firebase": "^7.16.0",
+    "lodash": "^4.17.19",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
-    "vee-validate": "^3.3.6",
+    "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
     "vue-i18n": "^8.18.2",
@@ -39,8 +40,8 @@
     "vue2-persian-datepicker": "^2.1.1",
     "vue2-touch-events": "^2.2.1",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.3.2",
-    "vuex": "^3.4.0"
+    "vuetify": "^2.3.4",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@mdi/font": "^5.3.45",
@@ -53,11 +54,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.26.9",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.6",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.5.0"
+    "vuetify-loader": "^1.6.0"
   },
   "eslintConfig": {
     "root": true,
