--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,15 @@ jobs:
       env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           PROJECT_ID:   "aiki-helpdesk-v1"
+         
+    - name: Docker Publish
+      uses: elgohr/Publish-Docker-Github-Action@2.11
+      with:
+        name: aikico/helpdeskapp
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        tag_names: true
+              
     - name: Send Notification To Slack
       uses: rtCamp/action-slack-notify@v2.0.0
       env:
@@ -46,4 +55,4 @@ jobs:
       uses: dhollerbach/github-action-send-message-to-ms-teams@1.0.10
       with:
         webhook: ${{ secrets.TEAMS_WEBHOOK }}
-        message: $commitmsg      
+        message: ${{ SLACK_TITLE }}      
