--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           PROJECT_ID:   "aiki-helpdesk-v1"
          
-    - name: Docker Publish
-      uses: elgohr/Publish-Docker-Github-Action@2.11
+    - name: Publish On Docker
+      uses: elgohr/Publish-Docker-Github-Action@latest
       with:
         name: aikico/helpdeskapp
         username: ${{ secrets.DOCKER_USERNAME }}
@@ -46,13 +46,13 @@ jobs:
         tag_names: true
               
     - name: Send Notification To Slack
-      uses: rtCamp/action-slack-notify@v2.0.0
+      uses: rtCamp/action-slack-notify@latest
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_CHANNEL: "#general" 
         SLACK_TITLE: "Ticket Web App Published On Firebase"    
     - name: Send Notification To Microsoft Teams
-      uses: dhollerbach/github-action-send-message-to-ms-teams@1.0.10
+      uses: dhollerbach/github-action-send-message-to-ms-teams@latest
       with:
         webhook: ${{ secrets.TEAMS_WEBHOOK }}
         message: "Ticket Web App Published On Firebase"     
