--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-FIREBASE_API_KEY:
-FIREBASE_APP_ID:
-FIREBASE_MEASUREMENTID:
+VUE_APP_FIREBASE_API_KEY: AIzaSyCSuLmkyLa2KhAgPWxswwjcVOTDVjBYy94
+VUE_APP_FIREBASE_APP_ID:
+VUE_APP_FIREBASE_MEASUREMENTID:
