--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
+    "v-click-outside": "^3.0.1",
     "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-filepond": "^6.0.2",
