--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuex-orm/plugin-axios": "^0.9.3",
     "@vuex-orm/plugin-search": "^0.24.1",
     "axios": "^0.19.2",
+    "babel-polyfill": "^6.26.0",
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "filepond": "^4.18.0",
@@ -45,6 +46,7 @@
     "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.10.4",
     "@mdi/font": "^5.3.45",
     "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-eslint": "^4.4.6",
