--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-lodash": "^2.1.2",
     "vue-material-design-icons": "^4.7.1",
     "vue-meta": "^2.4.0",
+    "vue-native-notification": "^1.1.1",
     "vue-notification": "^1.3.20",
     "vue-persian-datetime-picker": "^2.1.6",
     "vue-progressbar": "^0.7.5",
