--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.34",
+    "@amcharts/amcharts4": "^4.9.37",
     "@hcaptcha/vue-hcaptcha": "^0.2.2",
     "@latelier/vue-signalr": "^1.1.9",
-    "@microsoft/signalr": "^3.1.6",
+    "@microsoft/signalr": "^3.1.7",
     "@vuex-orm/core": "^0.35.2",
     "@vuex-orm/plugin-axios": "^0.9.3",
     "@vuex-orm/plugin-search": "^0.24.1",
@@ -20,41 +20,41 @@
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "filepond": "^4.19.2",
-    "firebase": "^7.17.1",
-    "lodash": "^4.17.19",
+    "firebase": "^7.19.0",
+    "lodash": "^4.17.20",
     "mobile-device-detect": "^0.3.3",
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
     "v-click-outside": "^3.0.1",
-    "vee-validate": "^3.3.8",
-    "vue": "^2.6.11",
+    "vee-validate": "^3.3.9",
+    "vue": "^2.6.12",
     "vue-feedback-reaction": "^1.2.0",
     "vue-filepond": "^6.0.2",
-    "vue-i18n": "^8.20.0",
+    "vue-i18n": "^8.21.0",
     "vue-lodash": "^2.1.2",
-    "vue-material-design-icons": "^4.8.0",
+    "vue-material-design-icons": "^4.9.0",
     "vue-meta": "^2.4.0",
     "vue-native-notification": "^1.1.1",
     "vue-notification": "^1.3.20",
     "vue-persian-datetime-picker": "^2.2.0",
     "vue-progressbar": "^0.7.5",
-    "vue-router": "^3.4.1",
-    "vue-splash": "^1.0.0-alpha5",
+    "vue-router": "^3.4.3",
+    "vue-splash": "^1.1.1",
     "vue-toastification": "^1.7.6",
     "vue-uuid": "^1.1.1",
     "vue2-persian-datepicker": "^2.1.1",
-    "vue2-touch-events": "^2.2.1",
+    "vue2-touch-events": "^2.3.1",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.3.8",
+    "vuetify": "^2.3.9",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@mdi/font": "^5.4.55",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-pwa": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
+    "@mdi/font": "^5.5.55",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.4",
+    "@vue/cli-plugin-pwa": "^4.5.4",
+    "@vue/cli-plugin-vuex": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -62,7 +62,7 @@
     "sass": "^1.26.10",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.6.0"
   },
   "eslintConfig": {
