--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment-jalaali": "^0.9.2",
     "register-service-worker": "^1.7.1",
     "v-click-outside": "^3.1.0",
+    "v-mask": "^2.2.3",
     "vee-validate": "^3.3.9",
     "vue": "^2.6.12",
     "vue-feedback-reaction": "^1.2.0",
