Add i18n For Multi Language

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-VUE_APP_FIREBASE_API_KEY: AIzaSyCSuLmkyLa2KhAgPWxswwjcVOTDVjBYy94
-VUE_APP_FIREBASE_APP_ID:
-VUE_APP_FIREBASE_MEASUREMENTID:
+VUE_APP_I18N_LOCALE=en
+VUE_APP_I18N_FALLBACK_LOCALE=en
