--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "vue2-touch-events": "^2.3.2",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.3.10",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-i18n": "^1.13.1"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
