--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
-    "sass": "^1.29.0",
+    "sass": "1.32.13",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "^2.0.7",
